sv.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  namespace: ingress-nginx
spec:
  type: NodePort
  selector:
    app: nginx  #like tag
  ports:
    - protocol: TCP
      port: 80    #host port
      targetPort: 8000
      # nodePort: 31033
