ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:

  name: karandeep-ingress

  namespace: ingress-nginx

 

 



spec:

  ingressClassName: nginx

  rules:

  - host: karandeep.com

    http:

      paths:

        - path: /

          pathType: Prefix

          backend:

            service:

              name: my-service

              port:

                number: 80
